# invoice-processing-agent

./: .gitignore  Dockerfile  README.md  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  app.py  index.html
